--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -119,6 +119,8 @@ https://raw.githubusercontent.com/erdongchanyo/Rules/main/Quantumult%20X/kuaisho
 https:\/\/daojia\.jd\.com\/client\?_jdrandom=\d{13}&functionId=%2Fsignin url script-request-header https://raw.githubusercontent.com/Sunert/Scripts/master/Task/jddj.js
 # 招商银行信用卡微信公众号：“领积分 - 🎁签到领积分” 获取 Cookie
 https://weclub\.ccc\.cmbchina.com/SCRMCustomActivityFront/checkin/request/get-home-data\.json\?activityCode=checkin url script-request-header cmbchina.js
+# 哈啰出行
+^https:\/\/gameapi\.hellobike\.com\/api url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/hellobike/hellobike.js
 
 ### 去广告
 # 抖音去广告去水印 (By Choler)
