--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -41,9 +41,9 @@ static=美国, server-tag-regex=(?=.*(美国|美國|US|(?i)States|American))^((?
 static=香港, server-tag-regex=(?=.*(香港|HK|(?i)Hong))^((?!(专线|手游|游戏|(?i)IPLC|IEPL|game)).)*$, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/HK.png
 static=台湾, server-tag-regex=(?=.*(台湾|台灣|TW|(?i)Taiwan))^((?!(专线|手游|游戏|(?i)IPLC|IEPL|game)).)*$, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/TW.png
 
-static=Final, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Final.png
-static=Streaming, proxy, ❸V2.US川谱 [NF] [Hulu] [1], ❸TJ.US川谱 [NF] [荐] [1], img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Streaming.png
-static=StreamingSE, direct, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/StreamingSE.png
+static=Final, 香港, 美国, 台湾, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Final.png
+static=Streaming, 香港, 美国, 台湾, Guard, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Streaming.png
+static=StreamingSE, 香港, 美国, 台湾, proxy, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/StreamingSE.png
 static=Guard, reject, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Hijacking.png
 
 
