--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -47,6 +47,7 @@ static=台湾, server-tag-regex=(?=.*(台湾|台灣|TW|(?i)Taiwan))^((?!(专线|
 
 static=Guard, reject, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Hijacking.png
 
+static=流量, server-tag-regex=流量
 
 [filter_remote]
 # 分流订阅
