--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -96,7 +96,8 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhi
 https://raw.githubusercontent.com/erdongchanyo/Rules/main/Quantumult%20X/dyjsb/dyjs_cookie.conf, tag=抖音极速版获取cookie, update-interval=86400, opt-parser=false, enabled=false
 # 快手极速版获取cookie
 https://raw.githubusercontent.com/erdongchanyo/Rules/main/Quantumult%20X/kuaishou/kuaishou_cookie.conf, tag=快手极速版获取cookie, update-interval=86400, opt-parser=false, enabled=false
-
+# BoxJs
+https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.conf, update-interval=86400, opt-parser=false, enabled=true
 
 [server_local]
 # 可在此添加自己的节点
