--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -113,6 +113,7 @@ USER-AGENT,AVOS*,REJECT
 # 召唤师 
 host, sspanel.net, Streaming
 host, zhs.tw, Streaming
+host, https://raw.githubusercontent.com/Orz-3/mini/master/Alipay.png, Streaming
 # Local Area Network 局域网
 host-suffix, local, direct
 ip-cidr, 192.168.0.0/16, direct
