--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -270,7 +270,8 @@ https://note.youdao.com/yws/(mapi/payment|api/self) url script-response-body htt
 https:\/\/api\.termius\.com\/api\/v3\/bulk\/account\/ url script-response-body https://raw.githubusercontent.com/langkhach270389/Scripting/master/Terminus.js
 # Lake VIP
 ^https:\/\/api\.lakecoloring\.com\/v1\/receipt url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/lake.js
-
+#lightroom
+^https:\/\/photos\.adobe\.io\/v2\/accounts* url script-response-body https://raw.githubusercontent.com/langkhach270389/Scripting/master/Lightroom.js
 
 [task_local]
 # 京东多合一签到
