--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -113,6 +113,10 @@ USER-AGENT,AVOS*,REJECT
 # 召唤师 
 host, sspanel.net, Streaming
 host, zhs.tw, Streaming
+# League of Legends: Wild Rift!
+DOMAIN-SUFFIX,pvp.net,Streaming
+DOMAIN-SUFFIX,riotgames.com,Streaming
+DOMAIN-SUFFIX,riotcdn.net,Streaming
 # Local Area Network 局域网
 host-suffix, local, direct
 ip-cidr, 192.168.0.0/16, direct
