--- a/Get_Cookie_Remote.conf
+++ b/Get_Cookie_Remote.conf
@@ -1,5 +1,8 @@
-#少了饿了么
-hostname = api.m.jd, i.meituan.com, ifac*.iqiyi.com, credits.bz.mgtv.com, maicai.api.ddxq.mobi, cloud.umetrip.com, h5.ele.me, daojia.jd.com, weclub.ccc.cmbchina.com, gameapi.hellobike.com, music.163.com
+#Cookie获取订阅
+#适用于WorkingCopy远程挂载
+#Cookie获取成功后在重写里禁用掉本订阅
+#Cookie失效时在重写里启用本订阅
+hostname = api.m.jd, i.meituan.com, mobwsa.ximalaya.com, ifac*.iqiyi.com, credits.bz.mgtv.com, maicai.api.ddxq.mobi, cloud.umetrip.com, h5.ele.me, daojia.jd.com, weclub.ccc.cmbchina.com, gameapi.hellobike.com, music.163.com
 
 ### Get Cookies
 # 京东多合一 获取签到cookie
