--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -269,6 +269,10 @@ https://api.shimo.im/users/ url script-response-body https://raw.githubuserconte
 ^https?:\/\/p\.du\.163\.com\/gain\/readtime\/info\.json url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/wnyd.js
 # 西窗烛 VIP（By 黑黑酱）
 ^https:\/\/avoscloud\.com\/1\.1\/users\/ url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/xcz.js
+# Blinkist
+^https:\/\/api\.blinkist\.com\/v4\/(me$|me.json$|me\/access$) url script-response-body https://raw.githubusercontent.com/langkhach270389/Scripting/master/blinkist.js
+# Sololearn 
+^https:\/\/api\.sololearn\.com\/(Profile\/GetProfile$|authenticateDevice$) url script-response-body https://raw.githubusercontent.com/langkhach270389/Scripting/master/sololearn.js
 
 
 [task_local]
