--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -97,7 +97,7 @@ https://raw.githubusercontent.com/erdongchanyo/Rules/main/Quantumult%20X/dyjsb/d
 # 快手极速版获取cookie
 https://raw.githubusercontent.com/erdongchanyo/Rules/main/Quantumult%20X/kuaishou/kuaishou_cookie.conf, tag=快手极速版获取cookie, update-interval=86400, opt-parser=false, enabled=false
 # BoxJs
-https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=快手极速版获取cookie, update-interval=86400, opt-parser=false, enabled=true
+https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=BoxJs, update-interval=86400, opt-parser=false, enabled=true
 
 [server_local]
 # 可在此添加自己的节点
