--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -44,6 +44,7 @@ static=StreamingSE, 香港, 美国, 台湾, proxy, direct, img-url=https://raw.g
 static=美国, server-tag-regex=(?=.*(美国|美國|US|(?i)States|American))^((?!(⓪|❶|❷|耗尽|(?i)IPLC|IEPL|game)).)*$, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/US.png
 static=香港, server-tag-regex=(?=.*(香港|HK|HGC|(?i)Hong))^((?!(⓪|❶|❷|耗尽|(?i)IPLC|IEPL|game)).)*$, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/HK.png
 static=台湾, server-tag-regex=(?=.*(台湾|台灣|TW|(?i)Taiwan))^((?!(⓪|❶|❷|耗尽|(?i)IPLC|IEPL|game)).)*$, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/TW.png
+static=日本, server-tag-regex=(?=.*(日本|JP|(?i)Japan))^((?!(⓪|❶|❷|耗尽|(?i)IPLC|IEPL|game)).)*$, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/JP.png
 
 static=Guard, reject, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Hijacking.png
 
