--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -267,15 +267,15 @@ https://api.shimo.im/users/ url script-response-body https://raw.githubuserconte
 # APP登陆账号后，点击主页'签到',即可
 2 1 * * * https://raw.githubusercontent.com/Sunert/Scripts/master/Task/jddj.js, tag=京东到家, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/jddj.png, enabled=true
 # 美团签到
-3 1 * * * meituan.js, tag=美团签到, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/meituan.png, enabled=true
+3 1 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/meituan/meituan.js, tag=美团签到, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/meituan.png, enabled=true
 # 饿了么-打卡领红包
 4 1 * * * https://raw.githubusercontent.com/songyangzz/QuantumultX/master/elem/elemSign.js, tag=饿了么, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/elem.png, enabled=true
 # 叮咚买菜签到
-5 1 * * * mcdd.js, tag=叮咚买菜签到, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/mcdd.png, enabled=true
+5 1 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/mcdd/mcdd.js, tag=叮咚买菜签到, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/mcdd.png, enabled=true
 # 爱奇艺会员签到
 6 1 * * * https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js, tag=爱奇艺签到, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/iQIYI.png, enabled=true
 # 芒果TV签到
-7 1 * * * mgtv.js, tag=芒果TV签到, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/mgtv.png, enabled=true
+7 1 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/mgtv/mgtv.js, tag=芒果TV签到, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/mgtv.png, enabled=true
 # 嘀嘀出行签到
 8 1 * * * https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_new.js, tag=滴滴出行, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/didi.png, enabled=true
 # 哈啰出行
