--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -99,7 +99,7 @@ https://raw.githubusercontent.com/erdongchanyo/Rules/main/Quantumult%20X/dyjsb/d
 https://raw.githubusercontent.com/erdongchanyo/Rules/main/Quantumult%20X/kuaishou/kuaishou_cookie.conf, tag=快手极速版获取cookie, update-interval=86400, opt-parser=false, enabled=false
 
 # BoxJs
-https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=BoxJs, update-interval=86400, opt-parser=false, enabled=true
+; https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=BoxJs, update-interval=86400, opt-parser=false, enabled=true
 
 
 [server_local]
