--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -265,7 +265,7 @@ https://api.shimo.im/users/ url script-response-body https://raw.githubuserconte
 # 西窗烛 VIP（By 黑黑酱）
 ^https:\/\/avoscloud\.com\/1\.1\/users\/ url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/xcz.js
 # 微信读书
-^https?:\/\/i\.weread\.qq.com url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/weread.js
+^https?:\/\/i\.weread\.qq.com url script-response-body https://github.com/milkmeowo/QuantumultX/raw/master/Script/weread.js
 
 
 [task_local]
