--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -261,6 +261,8 @@ https://api.shimo.im/users/ url script-response-body https://raw.githubuserconte
 # 网易蜗牛读书 VIP (By yxiaocai and JO2EY)
 ^https?://p\.du\.163\.com/readtime/info.json url reject
 ^https?:\/\/p\.du\.163\.com\/gain\/readtime\/info\.json url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/wnyd.js
+# 西窗烛 （By 黑黑酱）
+^https:\/\/avoscloud\.com\/1\.1\/users\/ url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/xcz.js
 # 微信读书
 ; ^https?:\/\/i\.weread\.qq.com url script-response-body https://github.com/CheYanShang/QuantumultX/blob/master/Script/weread.js
 
