--- a/QuantumultXiPhone.conf
+++ b/QuantumultXiPhone.conf
@@ -92,6 +92,9 @@ https://raw.githubusercontent.com/DivineEngine/Profiles/master/Quantumult/Rewrit
 # 知乎助手_去广告及体验增强
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.qxrewrite, tag=ZhihuAdBlockPlus, update-interval=86400, opt-parser=false, enabled=true
 
+# BoxJs 稳定版
+ https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.quanx.conf
+
 
 [server_local]
 # 可在此添加自己的节点
@@ -122,6 +125,14 @@ final, Final
 
 
 [rewrite_local]
+### Get Cookies
+# 电信营业厅签到 获取cookies
+; ^https:\/\/wapside.189.cn:9001\/api\/home\/homeInfo url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/10000/10000.cookie.js
+# 电信金豆兑换话费 获取cookies
+^https:\/\/wapside.189.cn:9001\/api\/exchange\/consume url script-request-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/dianx/dianx.js
+# 电信整点开宝箱 获取cookies
+^https:\/\/alipaymini\.189\.cn:8043\/treasureBox\/queryUserActivityInfo url script-request-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/dianx/dxbox.js
+
 ### 去广告
 # 抖音去广告去水印 (By Choler)
 ^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/ url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Aweme.js
@@ -197,6 +208,12 @@ https://api.shimo.im/users/ url script-response-body https://raw.githubuserconte
 
 
 [task_local]
+# 电信营业厅签到
+15 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/10000/10000.js, tag=电信营业厅签到, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/10000.png, enabled=true
+# 电信金豆兑换话费
+0 10 * * * https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/dianx/dianx.js, tag=电信金豆兑换话费, img-url=https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/dianx/dianx.png, enabled=true
+# 电信整点开宝箱
+36 0 8,12,13,14,18,19,20,21,22,23 * * * https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/dianx/dxbox.js, tag=电信整点开宝箱, img-url=https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/dianx/dxbox.png, enabled=true
 
 
 [mitm]
