--- a/QuantumultXiPhone.conf
+++ b/QuantumultXiPhone.conf
@@ -93,9 +93,9 @@ https://raw.githubusercontent.com/DivineEngine/Profiles/master/Quantumult/Rewrit
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.qxrewrite, tag=ZhihuAdBlockPlus, update-interval=86400, opt-parser=false, enabled=true
 
 # BoxJs 稳定版
- https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.quanx.conf
-
-
+ https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=BoxJs, update-interval=86400, opt-parser=false, enabled=true
+ 
+ 
 [server_local]
 # 可在此添加自己的节点
 
