--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -95,6 +95,9 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhi
 # 快手极速版 获取cookie
 https://raw.githubusercontent.com/erdongchanyo/Rules/main/Quantumult%20X/kuaishou/kuaishou_cookie.conf, tag=快手极速版获取cookie, update-interval=86400, opt-parser=false, enabled=false
 
+# 普拉斯视频
+https://subweb.oss-cn-hongkong.aliyuncs.com/Module/embyUnlocked.conf
+
 # BoxJs
 https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=BoxJs, update-interval=86400, opt-parser=false, enabled=true
 
