--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -96,7 +96,7 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhi
 https://raw.githubusercontent.com/erdongchanyo/Rules/main/Quantumult%20X/kuaishou/kuaishou_cookie.conf, tag=快手极速版获取cookie, update-interval=86400, opt-parser=false, enabled=false
 
 # 普拉斯视频
-https://subweb.oss-cn-hongkong.aliyuncs.com/Module/embyUnlocked.conf
+https://subweb.oss-cn-hongkong.aliyuncs.com/Module/embyUnlocked.conf, tag=普拉斯视频, update-interval=86400, opt-parser=false, enabled=true
 
 # BoxJs
 https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=BoxJs, update-interval=86400, opt-parser=false, enabled=true
@@ -108,19 +108,34 @@ https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.
 
 
 [filter_local]
+
+# 普拉斯Emby视频
+# AGA公益服(中国电信可直连观看)
+DOMAIN,https://emby.plusmedia.site,direct
+# CF公益服(仅限挂代理观看)
+DOMAIN,https://emby-cf.plusmedia.site,direct
+备用服1 - 4
+DOMAIN,https://emby.xeton.dev,direct
+DOMAIN,https://jellyfin.xeton.dev,direct
+DOMAIN,https://movie.xeton.dev,direct
+DOMAIN,https://sDOMAIN,ervers.xeton.dev,direct
+
 # 知乎去广告
 DOMAIN,118.89.204.198,REJECT
 DOMAIN-KEYWORD,118.89.204.198,REJECT
 IP-CIDR,118.89.204.198/32,REJECT
 DOMAIN,appcloud2.in.zhihu.com,REJECT
 USER-AGENT,AVOS*,REJECT
+
 # 召唤师 
 host, sspanel.net, Streaming
 host, zhs.tw, Streaming
+
 # League of Legends: Wild Rift!
 DOMAIN-SUFFIX,pvp.net,Streaming
 DOMAIN-SUFFIX,riotgames.com,Streaming
 DOMAIN-SUFFIX,riotcdn.net,Streaming
+
 # Local Area Network 局域网
 host-suffix, local, direct
 ip-cidr, 192.168.0.0/16, direct
@@ -130,6 +145,7 @@ ip-cidr, 127.0.0.0/8, direct
 ip-cidr, 100.64.0.0/10, direct
 ip-cidr, 224.0.0.0/4, direct
 ip6-cidr, fe80::/10, direct
+
 # GeoIP China(若启用，则禁用 ChinaIP.list)
 geoip, cn, direct
 final, Final
