--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -95,8 +95,8 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhi
 # 快手极速版 获取cookie
 https://raw.githubusercontent.com/erdongchanyo/Rules/main/Quantumult%20X/kuaishou/kuaishou_cookie.conf, tag=快手极速版获取cookie, update-interval=86400, opt-parser=false, enabled=false
 
-# 普拉斯视频
-https://subweb.oss-cn-hongkong.aliyuncs.com/Module/embyUnlocked.conf, tag=普拉斯视频, update-interval=86400, opt-parser=false, enabled=true
+# embyUnlocked
+https://subweb.oss-cn-hongkong.aliyuncs.com/Module/embyUnlocked.conf, tag=embyUnlocked, update-interval=86400, opt-parser=false, enabled=true
 
 # BoxJs
 https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=BoxJs, update-interval=86400, opt-parser=false, enabled=true
@@ -108,13 +108,12 @@ https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.
 
 
 [filter_local]
-
 # 普拉斯Emby视频
-# AGA公益服(中国电信可直连观看)
+; AGA公益服(中国电信可直连观看)
 DOMAIN,https://emby.plusmedia.site,direct
-# CF公益服(仅限挂代理观看)
+; CF公益服(仅限挂代理观看)
 DOMAIN,https://emby-cf.plusmedia.site,direct
-备用服1 - 4
+; 备用服1 - 4
 DOMAIN,https://emby.xeton.dev,direct
 DOMAIN,https://jellyfin.xeton.dev,direct
 DOMAIN,https://movie.xeton.dev,direct
