--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -113,7 +113,7 @@ https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.
 DOMAIN,https://emby.plusmedia.site,direct
 ; CF公益服(仅限挂代理观看)
 DOMAIN,https://emby-cf.plusmedia.site,direct
-; 备用服1 - 4
+; 备用服1 - 4(需要代理）
 DOMAIN,https://emby.xeton.dev,direct
 DOMAIN,https://jellyfin.xeton.dev,direct
 DOMAIN,https://movie.xeton.dev,direct
