--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -110,14 +110,14 @@ https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.
 [filter_local]
 # 普拉斯Emby视频
 ; AGA公益服(中国电信可直连观看)
-DOMAIN,https://emby.plusmedia.site,direct
+DOMAIN-SUFFIX,emby.plusmedia.site,direct
 ; CF公益服(仅限挂代理观看)
-DOMAIN,https://emby-cf.plusmedia.site,direct
-; 备用服1 - 4(需要代理）
-DOMAIN,https://emby.xeton.dev,direct
-DOMAIN,https://jellyfin.xeton.dev,direct
-DOMAIN,https://movie.xeton.dev,direct
-DOMAIN,https://sDOMAIN,ervers.xeton.dev,direct
+DOMAIN-SUFFIX,emby-cf.plusmedia.site,direct
+; 备用服1 - 4
+DOMAIN-SUFFIX,emby.xeton.dev,direct
+DOMAIN-SUFFIX,jellyfin.xeton.dev,direct
+DOMAIN-SUFFIX,movie.xeton.dev,direct
+DOMAIN-SUFFIX,servers.xeton.dev,direct
 
 # 知乎去广告
 DOMAIN,118.89.204.198,REJECT
