--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -119,6 +119,8 @@ DOMAIN-SUFFIX,jellyfin.xeton.dev,direct
 DOMAIN-SUFFIX,movie.xeton.dev,direct
 DOMAIN-SUFFIX,servers.xeton.dev,direct
 
+DOMAIN-SUFFIX,embyserver.ga,direct
+
 # 知乎去广告
 DOMAIN,118.89.204.198,REJECT
 DOMAIN-KEYWORD,118.89.204.198,REJECT
