--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -41,6 +41,7 @@ server=/*.xiaomi.com/119.29.29.29
 static=Final, 香港, 美国, 台湾, 日本, proxy, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Final.png
 static=Streaming, 香港, 美国, 台湾, 日本, proxy, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Streaming.png
 static=StreamingSE, 香港, 美国, 台湾, 日本, proxy, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/StreamingSE.png
+static=普拉斯, 香港, 美国, 台湾, 日本, proxy, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/PLUS.png
 
 static=香港, server-tag-regex=(?=.*(香港|HK|HGC|(?i)Hong))^((?!(⓪|❶|❷|耗尽|(?i)IPLC|IEPL|game)).)*$, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/HK.png
 static=美国, server-tag-regex=(?=.*(美国|美國|US|(?i)States|American))^((?!(⓪|❶|❷|耗尽|(?i)IPLC|IEPL|game)).)*$, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/US.png
@@ -110,16 +111,14 @@ https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.
 [filter_local]
 # 普拉斯Emby视频
 ; AGA公益服(中国电信可直连观看)
-DOMAIN-SUFFIX,emby.plusmedia.site,direct
+DOMAIN-SUFFIX,emby.plusmedia.site,普拉斯
 ; CF公益服(仅限挂代理观看)
-DOMAIN-SUFFIX,emby-cf.plusmedia.site,direct
+DOMAIN-SUFFIX,emby-cf.plusmedia.site,普拉斯
 ; 备用服1 - 4
-DOMAIN-SUFFIX,emby.xeton.dev,direct
-DOMAIN-SUFFIX,jellyfin.xeton.dev,direct
-DOMAIN-SUFFIX,movie.xeton.dev,direct
-DOMAIN-SUFFIX,servers.xeton.dev,direct
-
-DOMAIN-SUFFIX,embyserver.ga,direct
+DOMAIN-SUFFIX,emby.xeton.dev,普拉斯
+DOMAIN-SUFFIX,jellyfin.xeton.dev,普拉斯
+DOMAIN-SUFFIX,movie.xeton.dev,普拉斯
+DOMAIN-SUFFIX,servers.xeton.dev,普拉斯
 
 # 知乎去广告
 DOMAIN,118.89.204.198,REJECT
