--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -115,7 +115,7 @@ DOMAIN-SUFFIX,emby.plusmedia.site,PLUS
 ; CF公益服(仅限挂代理观看)
 DOMAIN-SUFFIX,emby-cf.plusmedia.site,PLUS
 ; 备用服1 - 4
-DOMAIN-SUFFIX,emby.xeton.dev,Emby
+DOMAIN-SUFFIX,emby.xeton.dev,PLUS
 DOMAIN-SUFFIX,jellyfin.xeton.dev,PLUS
 DOMAIN-SUFFIX,movie.xeton.dev,PLUS
 DOMAIN-SUFFIX,servers.xeton.dev,PLUS
