--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -119,6 +119,8 @@ DOMAIN-SUFFIX,emby.xeton.dev,PLUS
 DOMAIN-SUFFIX,jellyfin.xeton.dev,PLUS
 DOMAIN-SUFFIX,movie.xeton.dev,PLUS
 DOMAIN-SUFFIX,servers.xeton.dev,PLUS
+; USER-AGENT
+USER-AGENT,Emby*,PLUS
 
 # 知乎去广告
 DOMAIN,118.89.204.198,REJECT
