--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -108,7 +108,7 @@ https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.
 
 
 [filter_local]
-# 普拉斯Emby视频
+### 普拉斯Emby视频
 ; AGA公益服(中国电信可直连观看)
 ; DOMAIN-SUFFIX,emby.plusmedia.site,PLUS
 ; CF公益服(仅限挂代理观看)
