--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -40,7 +40,7 @@ server=/*.xiaomi.com/119.29.29.29
 static=Final, 香港, 美国, 台湾, 日本, proxy, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Final.png
 static=Streaming, 香港, 美国, 台湾, 日本, proxy, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Streaming.png
 static=StreamingSE, 香港, 美国, 台湾, 日本, proxy, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/StreamingSE.png
-static=PLUS, 香港, 美国, 台湾, 日本, proxy, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/plus.png
+static=Emby, 香港, 美国, 台湾, 日本, proxy, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/emby.png
 
 static=香港, server-tag-regex=(?=.*(香港|HK|HGC|(?i)Hong))^((?!(⓪|❶|❷|耗尽|(?i)IPLC|IEPL|game)).)*$, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/HK.png
 static=美国, server-tag-regex=(?=.*(美国|美國|US|(?i)States|American))^((?!(⓪|❶|❷|耗尽|(?i)IPLC|IEPL|game)).)*$, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/US.png
@@ -110,16 +110,16 @@ https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.
 [filter_local]
 ### 普拉斯Emby视频
 ; AGA公益服(中国电信可直连观看)
-; DOMAIN-SUFFIX,emby.plusmedia.site,PLUS
+; DOMAIN-SUFFIX,emby.plusmedia.site,Emby
 ; CF公益服(仅限挂代理观看)
-; DOMAIN-SUFFIX,emby-cf.plusmedia.site,PLUS
+; DOMAIN-SUFFIX,emby-cf.plusmedia.site,Emby
 ; 备用服1 - 4
-DOMAIN-SUFFIX,emby.xeton.dev,PLUS
-DOMAIN-SUFFIX,jellyfin.xeton.dev,PLUS
-DOMAIN-SUFFIX,movie.xeton.dev,PLUS
-DOMAIN-SUFFIX,servers.xeton.dev,PLUS
+DOMAIN-SUFFIX,emby.xeton.dev,Emby
+DOMAIN-SUFFIX,jellyfin.xeton.dev,Emby
+DOMAIN-SUFFIX,movie.xeton.dev,Emby
+DOMAIN-SUFFIX,servers.xeton.dev,Emby
 ; USER-AGENT
-USER-AGENT,Emby*,PLUS
+USER-AGENT,Emby*,Emby
 
 # 知乎去广告
 DOMAIN,118.89.204.198,REJECT
