--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -42,10 +42,10 @@ static=Streaming, 香港, 美国, 台湾, 日本, proxy, direct, img-url=https:/
 static=StreamingSE, 香港, 美国, 台湾, 日本, proxy, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/StreamingSE.png
 static=Emby, 香港, 美国, 台湾, 日本, proxy, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/emby.png
 
-static=香港, server-tag-regex=(?=.*(香港|HK|HGC|(?i)Hong))^((?!(⓪|❶|❷|耗尽|(?i)IPLC|IEPL|game)).)*$, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/HK.png
-static=美国, server-tag-regex=(?=.*(美国|美國|US|(?i)States|American))^((?!(⓪|❶|❷|耗尽|(?i)IPLC|IEPL|game)).)*$, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/US.png
-static=台湾, server-tag-regex=(?=.*(台湾|台灣|TW|(?i)Taiwan))^((?!(⓪|❶|❷|耗尽|(?i)IPLC|IEPL|game)).)*$, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/TW.png
-static=日本, server-tag-regex=(?=.*(日本|JP|(?i)Japan))^((?!(⓪|❶|❷|耗尽|(?i)IPLC|IEPL|game)).)*$, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/JP.png
+url-latency-benchmark=香港, server-tag-regex=(?=.*(香港|HK|HGC|(?i)Hong))^((?!(⓪|❶|❷|耗尽|(?i)IPLC|IEPL|game)).)*$, check-interval=300, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/HK.png
+url-latency-benchmark=美国, server-tag-regex=(?=.*(美国|美國|US|(?i)States|American))^((?!(⓪|❶|❷|耗尽|(?i)IPLC|IEPL|game)).)*$, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/US.png
+url-latency-benchmark=台湾, server-tag-regex=(?=.*(台湾|台灣|TW|(?i)Taiwan))^((?!(⓪|❶|❷|耗尽|(?i)IPLC|IEPL|game)).)*$, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/TW.png
+url-latency-benchmark=日本, server-tag-regex=(?=.*(日本|JP|(?i)Japan))^((?!(⓪|❶|❷|耗尽|(?i)IPLC|IEPL|game)).)*$, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/JP.png
 
 static=Guard, reject, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Hijacking.png
 
