--- a/QuantumultXiPhone.conf
+++ b/QuantumultXiPhone.conf
@@ -111,8 +111,8 @@ IP-CIDR,118.89.204.198/32,REJECT
 DOMAIN,appcloud2.in.zhihu.com,REJECT
 USER-AGENT,AVOS*,REJECT
 # 召唤师 
-host, sspanel.net, Streaming
-host, zhs.tw, Streaming
+host, sspanel.net, Final
+host, zhs.tw, Final
 # Local Area Network 局域网
 host-suffix, local, direct
 ip-cidr, 192.168.0.0/16, direct
@@ -123,7 +123,7 @@ ip-cidr, 100.64.0.0/10, direct
 ip-cidr, 224.0.0.0/4, direct
 ip6-cidr, fe80::/10, direct
 # GeoIP China(若启用，则禁用 ChinaIP.list)
-# geoip, cn, direct
+-geoip, cn, direct
 final, Final
 
 
