--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -112,35 +112,6 @@ https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.
 
 
 [filter_local]
-### 普拉斯Emby视频
-; AGA公益服(中国电信可直连观看)
-; DOMAIN-SUFFIX,emby.plusmedia.site,Emby
-; CF公益服(仅限挂代理观看)
-; DOMAIN-SUFFIX,emby-cf.plusmedia.site,Emby
-; 备用服1 - 4
-DOMAIN-SUFFIX,emby.xeton.dev,Emby
-DOMAIN-SUFFIX,jellyfin.xeton.dev,Emby
-DOMAIN-SUFFIX,movie.xeton.dev,Emby
-DOMAIN-SUFFIX,servers.xeton.dev,Emby
-; USER-AGENT
-USER-AGENT,Emby*,Emby
-
-# 知乎去广告
-DOMAIN,118.89.204.198,REJECT
-DOMAIN-KEYWORD,118.89.204.198,REJECT
-IP-CIDR,118.89.204.198/32,REJECT
-DOMAIN,appcloud2.in.zhihu.com,REJECT
-USER-AGENT,AVOS*,REJECT
-
-# 召唤师 
-host, sspanel.net, Streaming
-host, zhs.tw, Streaming
-
-# League of Legends: Wild Rift!
-DOMAIN-SUFFIX,pvp.net,Streaming
-DOMAIN-SUFFIX,riotgames.com,Streaming
-DOMAIN-SUFFIX,riotcdn.net,Streaming
-
 # Local Area Network 局域网
 host-suffix, local, direct
 ip-cidr, 192.168.0.0/16, direct
@@ -150,10 +121,19 @@ ip-cidr, 127.0.0.0/8, direct
 ip-cidr, 100.64.0.0/10, direct
 ip-cidr, 224.0.0.0/4, direct
 ip6-cidr, fe80::/10, direct
-
 # GeoIP China(若启用，则禁用 ChinaIP.list)
 -geoip, cn, direct
 final, Final
+
+# 知乎去广告
+DOMAIN,118.89.204.198,REJECT
+DOMAIN-KEYWORD,118.89.204.198,REJECT
+IP-CIDR,118.89.204.198/32,REJECT
+DOMAIN,appcloud2.in.zhihu.com,REJECT
+USER-AGENT,AVOS*,REJECT
+# 召唤师 
+host, sspanel.net, Final
+host, zhs.tw, Final
 
 
 [rewrite_local]
