--- a/QuantumultXiPhone.conf
+++ b/QuantumultXiPhone.conf
@@ -123,8 +123,8 @@ IP-CIDR,118.89.204.198/32,REJECT
 DOMAIN,appcloud2.in.zhihu.com,REJECT
 USER-AGENT,AVOS*,REJECT
 # 召唤师 
-host, sspanel.net, Final
-host, zhs.tw, Final
+host, sspanel.net, Global
+host, zhs.tw, Global
 
 
 [rewrite_local]
