--- a/QuantumultXiPhone.conf
+++ b/QuantumultXiPhone.conf
@@ -200,6 +200,8 @@ https://api.shimo.im/users/ url script-response-body https://raw.githubuserconte
 ^https?:\/\/p\.du\.163\.com\/gain\/readtime\/info\.json url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/wnyd.js
 # 微信读书 免费无限卡
 ; ^https?:\/\/i\.weread\.qq.com url script-response-body https://github.com/CheYanShang/QuantumultX/blob/master/Script/weread.js
+#Undfold+
+^https:\/\/api\.unfold\.app\/v1\/ios\/receipts$ url script-response-body https://raw.githubusercontent.com/langkhach270389/Quantumult-X-LK/master/Scripts/langkhach/unfold.js
 
 
 [task_local]
