--- a/QuantumultXiPad.conf
+++ b/QuantumultXiPad.conf
@@ -97,12 +97,8 @@ https://raw.githubusercontent.com/DivineEngine/Profiles/master/Quantumult/Rewrit
 
 # 知乎助手 去广告及体验增强
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.qxrewrite, tag=ZhihuAdBlockPlus, update-interval=86400, opt-parser=false, enabled=true
-# 快手极速版 获取cookie
-https://raw.githubusercontent.com/erdongchanyo/Rules/main/Quantumult%20X/kuaishou/kuaishou_cookie.conf, tag=快手极速版获取cookie, update-interval=86400, opt-parser=false, enabled=false
-
 # EmbyUnlocked
 https://raw.githubusercontent.com/echoops/limitless/main/QuantumultX/Rewrite/emby.qxrewrite, tag=EmbyUnlocked, update-interval=86400, opt-parser=false, enabled=true
-
 # BoxJs
 https://gitee.com/chavyleung/scripts/raw/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=BoxJs, update-interval=86400, opt-parser=false, enabled=true
 
@@ -165,7 +161,14 @@ host, zhs.tw, Global
 # 喜马拉雅 获取cookie
 ;^https?:\/\/.*\/mobile\-user\/homePage\/.* url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/ximalaya/ximalaya.cookie.js
 # 招商银行信用卡微信公众号：“领积分 - 🎁签到领积分” 获取 Cookie
-;https://weclub\.ccc\.cmbchina.com/SCRMCustomActivityFront/checkin/request/get-home-data\.json\?activityCode=checkin url script-request-header cmbchina.js
+; https://weclub\.ccc\.cmbchina.com/SCRMCustomActivityFront/checkin/request/get-home-data\.json\?activityCode=checkin url script-request-header cmbchina.js
+# 抖音极速版 获取cookie
+; luckycat/aweme/v1/task/sign_in/detail? url script-request-header https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/dyjsb.js
+; luckycat/aweme/v1/task/done/read? url script-request-header https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/dyjsb.js
+; luckycat/aweme/v1/task/walk/step_submit? - script-request-header https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/dyjsb.js
+# 快手极速版 获取cookie
+; https:\/\/activity\.m\.kuaishou\.com\/rest\/wd\/taskCenter\/\w+\/module\/list url script-request-header https://raw.githubusercontent.com/Sunert/Scripts/master/Task/kuaishou.js
+; https:\/\/nebula\.kuaishou\.com\/nebula\/task\/earning\? url script-request-header https://raw.githubusercontent.com/Sunert/Scripts/master/Task/kuaishou.js
 
 ### 去广告
 # 抖音去广告去水印 (By Choler)
@@ -296,10 +299,10 @@ https://api.shimo.im/users/ url script-response-body https://raw.githubuserconte
 10 0 * * * https://raw.githubusercontent.com/zZPiglet/Task/master/umetrip/umetrip.js, tag=航旅纵横, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/umetrip.png, enabled=true
 # 喜马拉雅签到
 11 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/ximalaya/ximalaya.js, tag=喜马拉雅, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/ximalaya.png, enabled=true
-# 抖音极速版
+# 抖音极速版签到
 12 0 * * * https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/dyjsb.js, tag=抖音极速版, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/TikTok.png, enabled=true
 # 快手极速版签到
-13 0 * * * https://raw.githubusercontent.com/Sunert/Scripts/master/Task/kuaishou.js, tag=快手极速版, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/kuaishou.png, enabled=true
+13 0 * * * https://raw.githubusercontent.com/Sunert/Scripts/master/Task/kuaishou.js, tag=快手视频, tag=快手极速版, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/kuaishou.png, enabled=true
 # 网易云音乐签到
 ; 1. 先登录: <https://music.163.com/m/login>
 ; 2. 再访问: <https://music.163.com/#/user/level>
